# pyasyncio-benchmark

./: .gitignore  Dockerfile  README.md  alembic.ini  config.yaml  docker-compose.monitoring.yml  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 7e57f0e42f5e_init.py
benchmark/: aggregate.py  billing.py  cli.py  clients.py  crud.py  docker_utils.py  main.py  parameterize.py  scheduling.py  settings.py  synchronization.py
benchmark/tests/: aioboto3_cog_header.py  local_webserver.py  obstore_cog_header.py
benchmark/tests/aioboto3/: cog_header.py  fetch_range.py
benchmark/tests/aiohttp/: cog_header.py  dump_tiles.py  dump_tiles_merged.py  fetch_range.py  local_webserver.py
benchmark/tests/asynctiff/: cog_header.py  dump_tiles.py  dump_tiles_merged.py
benchmark/tests/fsspec_async/: cog_header.py  fetch_range.py
benchmark/tests/httpx/: cog_header.py  fetch_range.py
benchmark/tests/obstore/: cog_header.py  dump_tiles.py  fetch_range.py
benchmark/tests/rasterio/: cog_header.py  dump_tiles.py  dump_tiles_merged.py
benchmark/tests/requests/: cog_header.py  fetch_range.py
examples/: webserver.py
infra/: README.md
infra/aws/: app.py  aws_stack.py
infra/aws/aws/: aws_stack.py
scripts/: run_test.sh
test_results/: README.md  cog_header_results.csv
test_results/20250218_results/ec2_m5/: aggregated_results.csv  container_results.csv
test_results/20250218_results/ec2_m5_300seconds/: aggregated_results.csv  container_results.csv
test_results/20250423_results/ec2_m5_300seconds/: aggregated_results.csv  (+1 more)
(+4 files in other folders)
