[tool.poetry]
name = "pyasyncio-benchmark"
version = "0.1.0"
description = "Benchmark python coroutines in various ways"
authors = ["geospatial-jeff <geospatialjeff@gmail.com>"]
license = "apache"
readme = "README.md"
packages = [{include = "benchmark"}]

[tool.poetry.dependencies]
python = "^3.11"
obstore = "^0.2.0"
boto3 = "^1.35.51"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
